--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:nanoatmega328]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 framework = arduino
-lib_deps = drnic/CompassHeading@^1.0.0
+lib_deps = 
+	drnic/CompassHeading@^1.0.0
+	mikalhart/TinyGPSPlus@^1.0.3
